themes/mb-design/css/style.css
@charset "UTF-8";
/* CSS Document */
/*
1. theme colours

hover red - #e10033 - now defunt
red - #ee1d3a
white - #fff
light grey - #ddd
light to mid - #a0a0a0
mid grey - #7f7f7f
dark grey - #4d4d4d

- - - - - - - - - -
2. project colours

James Torble - Tomato red - #ff6347
Thomson Mediation - Navy Blue - #1e75af
Lunalux - Paper Bag Brown - #907e68
Able Mediation - Grass Green - #70bf44
CMC - Racing Car Red - #ef353a
Open Road - Electric Pink - #ed135d
Angela Jaleel - Turquoise Blue - #75ceba
TFL - Navy Blue - #204395

- - - - - - - - - -
3. font sizing
- - - - -
i. large
#header__menu a, h1, h2, h3, p.lg { 1.66em / 5.9vw }
- - - - -
ii. medium
h4, h5, h6, p, #project-nav a, #footer__menu a { 1.5em / 4.25vw }
- - - - -
iii. small
.featured, .caption { 1em / 3.5vw }


- - - - - - - - - -
4. padding - smallest size
- - - - -
i. full width
.half__left, .half__right, .half__centered, .wrapper__whole, .hero__info { padding: 2.5rem 2rem 3rem; }
- - - - -
ii. content reset
.half__left, .half__right, .half__centered { padding: 0; }
- - - - -
iii. headline
.wrapper__headline { padding: 0 2rem; }
- - - - -
iv. project nav
#project-nav a { padding: .5rem 2rem; }
- - - - -
v. footer
#footer__menu { padding: 2.5rem 2rem; }
.wrapper__footer { padding: 1rem 2rem; }


- - - - - - - - - -
5. breakpoints
600px
ipad portrait (768 - 1024 and portrait)
780px
860px
1024px
1220px

px - breakpoints (html)
rem - containers

*/


html{font-family:'Signika Negative', arial, sans-serif;font-size:16px;line-height:1.45;/*line-height:1.35;*/font-weight:400;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;}
body *{margin:0;padding:0;border:none;}
body{margin:0;color:#4d4d4d;}


/* - - - - - - - - - - */
/* headings */
h1, h2, h3, h4, h5, h6 /*,#header__menu a, #project-nav a, #footer__menu a*/{font-weight:600;}
h1, h2, h3, h4, .lg{font-size:1.66em;font-size:5.9vw;}

/* text */
p, ul, li, a{font-weight:400;}
h5, h6, p{font-size:1.5em;font-size:4.25vw;}
.lg{margin-top:1em;}
.lg:first-child{margin-top:0;}
.lg a{text-decoration:underline;}

/* lists */
ul{list-style-position:inside;list-style:none;}

/* links */
a{text-decoration:none;color:#7f7f7f;transition:color .25s ease-in-out;}
a:hover{color:#ee1d3a;}
a:active{outline:none;}

/* borders */
.border{border:1px solid #4d4d4d;}

/* 404 not found url */
#url{color:#ee1d3a;}

/* - - - - - - - - - - */
/* header menu */
#header__menu{display:table;text-align:center;}
#header__menu li{display:table-cell;width:33.33%;width:calc(100vw / 3);}
#header__menu a{display:block;box-sizing:border-box;overflow:hidden;transition:all ease-in-out 0.25s;padding:1.35em 0;max-height:4em;font-size:1.66em;font-size:5.9vw;}
#header__menu .item--current a{text-decoration:underline;}
#header__menu a:active{outline:none;}
/* logo */
#header__menu .item--home a{color:transparent;background-image:url('../images/assets/hexagon.svg');background-repeat:no-repeat;background-size:auto 50%;background-position:center;}
#header__menu .item--home a:hover{background-color:#ee1d3a;background-image:url('../images/assets/hexagon-white.svg');}
/* work and about */
#header__menu .item--work a{color:#7f7f7f;}
#header__menu .item--work a:hover{background-color:#ddd;}
#header__menu .item--about a:hover{background-color:#4d4d4d;color:#ddd;}


/* - - - - - - - - - - */
/* content */
.wrapper{display:block;box-sizing:border-box;width:100%;width:100vw;}/* required by IE edge */
.wrapper:after{display:block;content:"";clear:both;visibility:hidden;}

/* whole */
.wrapper__whole{display:block;box-sizing:border-box;padding:2.5rem 2rem 3rem;}
.wrapper__whole:after{display:block;content:"";clear:both;visibility:hidden;}
/* headline */
.wrapper__headline{display:block;box-sizing:border-box;padding:0 2rem;}
.wrapper__headline h1,
.wrapper__headline h2,
.wrapper__headline h3{/*font-weight:400;*/font-size:1.66em;font-size:5.9vw;padding:0.35em 0;}
.home .wrapper__headline{background-color:#ee1d3a;color:#fff;}
.work .wrapper__headline,
.wrapper__headline.headline--work{background-color:#ddd;color:#7f7f7f;}
.about .wrapper__headline{background-color:#4d4d4d;color:#ddd;}

/* NOTE: in project pages, could add project page colour in 'other project' heading automatically */

/* half */
.half__left,
.half__right,
.half__centered{display:block;box-sizing:border-box;padding:2.5rem 2rem 3rem;}
/* text containers */
.half__left.content,
.half__right.content,
.half__centered.content{padding:0;}
/* text */
.content h1,
.content h2,
.content h3,
.content h4,
.content h5,
.content h6,
.content p,
.content ul{text-align:justify;margin:1em 0;padding:0 2rem;}

/* old classes - override above text styles
 - removed old .caption class (at top of css)
 - border class is still there

h2.nomargin,
h3.nomargin,
p.nomargin{margin:0;}
h2.notopmargin,
h3.notopmargin,
p.notopmargin{margin-top:0;}

.content a{text-decoration:underline;}
.content .lg{text-align:center;}/* phone and email
.content img{width:100%;margin-bottom:1rem;}
.content img + .caption{margin-top:-0.5em;}

.caption{color:#a0a0a0;margin-top:1em;font-size:1em;font-size:3.5vw;}
.caption:before{content:"- ";}
*/

/* text formatting */
.content a{text-decoration:underline;}
.content .lg{text-align:center;}/* phone and email

/* images */
.content img {width:100%;margin-bottom:1rem;border-top:1px solid #4d4d4d;border-bottom:1px solid #4d4d4d;box-sizing:border-box;}

/* captions */
.content img + p{color:#a0a0a0;margin-top:-0.5em;font-size:1em;font-size:3.5vw;}
.content img + p:before{content:"- ";}

/* text */
.content h2{margin:0;}
.content h2 ~ p{margin-top:0;}/* all sibling <p> */
.content h2 + p,/* first sibling <p> */
.content h2 + img{margin-top:1em;}
.content h2 + p:last-child{margin-top:0;}/* if <h2> only has one sibling */
.content img + p + h2{margin-bottom:1em;}




/* - - - - - - - - - - */
/* thumbnails */
.thumbnail{position:relative;background-repeat:no-repeat;background-size:cover;box-sizing:border-box;}
/* ... */

